Pretty.markup_block) are now value-oriented. Use of the global
print_mode is restricted to ultimate Pretty.string_of (and some
variants), while the underlying Pretty.output operation supports an
explicit Pretty.output_ops argument for alternative applications.

* Pretty.pure_output_ops and Pretty.pure_string_of support
pretty-printed output without PIDE markup. This is occasionally useful
for special tools, in contrast to regular user output.

* The print_mode "latex" only affects inner syntax variants, while its
impact on Output/Markup/Pretty operations has been removed. Thus the
print_mode operations Output.output and Output.escape have become
obsolete: superseded by Latex.output_ and Latex.escape specifically for
LaTeX. Rare INCOMPATIBILITY for ambitious document antiquotations that
generate Latex source on their own account, instead of using regular
Pretty.T interfaces (that are based on Latex.output_ops internally).
Note that basic Markup.markup cannot be used for Latex output: proper
Pretty.T operations are required (e.g. Pretty.mark_str).


*** System ***

* The Build_Manager module has replaced previous glue-code for Jenkins
integration. The module contains a server that coordinates continuous
integration jobs and user-submitted build tasks and displays them via
web front-end. Users can submit tasks in the same manner as with the
local build tool, for example:

  isabelle build_task -o build_manager_ssh_user=huch -c -A: -a -X slow

This requires SSH access to the server and membership in a common Unix
group (same requirements as push access to the Isabelle repository).

* The Isabelle/Scala type Bytes has become more scalable, with support
for incremental construction via Bytes.Builder. There is no longer an
artificial size limit, in contrast to Java byte arrays (max. 2 GiB).
Bytes operations on files, streams, encode/decode, compress/uncompress,
etc. have become more efficient, and bypass Java strings (max. 1 GiB).