@@ -198,8 +198,8 @@ fun pretties_for_scope scope verbose =
 
 fun multiline_string_for_scope scope =
   let
-    val code_type = Print_Mode.setmp [] o Syntax.string_of_typ o Config.put show_markup false;
-    val code_term = Print_Mode.setmp [] o Syntax.string_of_term o Config.put show_markup false;
+    val code_type = Pretty.pure_string_of oo Syntax.pretty_typ o Config.put show_markup false;
+    val code_term = Pretty.pure_string_of oo Syntax.pretty_term o Config.put show_markup false;
     val (primary_cards, secondary_cards, maxes, iters, miscs) =
       quintuple_for_scope code_type code_term I scope
     val cards = primary_cards @ secondary_cards
