@@ -131,7 +131,8 @@ val one_year = seconds (365.0 * 24.0 * 60.0 * 60.0)
 
 fun hackish_string_of_term ctxt =
   (* FIXME: map_aterms (fn Free (s, T) => Free (if Name.is_internal s then "_" else s, T) | t => t)
-  #> *) Print_Mode.setmp [] (Syntax.string_of_term ctxt)
+  #> *) Syntax.pretty_term ctxt
+  #> Pretty.pure_string_of
   #> Protocol_Message.clean_output
   #> simplify_spaces
 
